[project]
name = "pdisk"
version = "1.0.6"
authors = [
  { name="kalanakt", email="kalanakt@uvew.xyz" },
]
description = "An Unofficial Asynchronous Python version of pdisk API wrapper"
readme = "package.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kalanakt/pdisk"
"Bug Tracker" = "https://github.com/kalanakt/pdisk/issues"